# octomap_compare

./: CMakeLists.txt  README.md  package.xml
include/hdbscan/: hdbscan.h
include/octomap_compare/: change_map.h  feature_extractor.h  file_writer.h  load_parameters.h  octomap_compare.h  octomap_compare_utils.h  octomap_container.h  random_forest_classifier.h
include/octomap_compare/container/: container_base.h  octomap_container.h  point_cloud_container.h
launch/: compare.launch  compare_params.yaml  offline.launch  online.launch  train.launch
src/: feature_extractor.cc  file_writer.cc  hdbscan.cc  octomap_compare.cc  octomap_compare_node.cc  octomap_compare_online_node.cc  octomap_container.cc  random_forest_classifier.cc  train_node.cc
srv/: SaveChangeMap.srv
