<?xml version="1.0"?>
<package format="2">
  <name>octomap_compare</name>
  <version>0.0.1</version>
  <description>octomap_compare</description>
  
  <maintainer email="lorenwel@ethz.ch">Lorenz Wellhausen</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>dbscan</depend>
  <depend>doxygen_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>libnabo</depend>
  <depend>libpointmatcher</depend>
  <depend>libpointmatcher_ros</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>octomap</depend>
  <depend>octomap_ros</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>  
  <depend>pcl_ros</depend>
  <depend>tf</depend>
  
</package>

