<?xml version="1.0"?>
<package format="2">
  <name>octomap_compare</name>
  <version>0.0.1</version>
  <description>octomap_compare</description>
  
  <maintainer email="lorenwel@ethz.ch">Lorenz Wellhausen</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>dbscan</depend>
  <depend>eigen_catkin</depend>
  <depend>eigen_conversions</depend>
  <depend>glog_catkin</depend>
  <depend>hdbscan</depend>
  <depend>libnabo</depend>
  <depend>libpointmatcher_ros</depend>
  <depend>octomap_ros</depend>
  <depend>roscpp</depend>  
  <depend>pcl_ros</depend>
  <depend>pcl_catkin</depend>
  <depend>sm_timing</depend>
  
</package>

